[gd_scene format=3 uid="uid://b2jk11veho2ly"]

[ext_resource type="Script" uid="uid://b0ea7v22tv5kl" path="res://Scenes/Menu/MenuInicial.gd" id="1_pq5jh"]
[ext_resource type="Theme" uid="uid://boio4eyolwhtj" path="res://Scenes/Menu/UI_theme.tres" id="2_ckujo"]
[ext_resource type="Script" uid="uid://bc0vg5nlr1jff" path="res://Scenes/Menu/coisas_iniciais.gd" id="2_l5uqn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfrjk"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_q8cmj"]
resource_name = "Inicial"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_0vkyi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ekcqx"]
_data = {
&"Inicial": SubResource("Animation_q8cmj"),
&"RESET": SubResource("Animation_0vkyi")
}

[node name="MenuInicial" type="Control" unique_id=26175987]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="." unique_id=936866134]
layout_mode = 0
offset_left = -358.0
offset_top = -180.0
offset_right = 1637.0
offset_bottom = 941.0
color = Color(0.101961, 0.109804, 0.172549, 1)

[node name="Node" type="Node" parent="." unique_id=1073565135]
script = ExtResource("1_pq5jh")

[node name="MenuInicial" type="Control" parent="." unique_id=1865684636]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MenuInicial" unique_id=416161381]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 90.0
offset_bottom = 181.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 66
bbcode_enabled = true
text = "[center]A mascará além do tempo"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="MenuInicial" unique_id=593870338]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 371.0
offset_top = 308.0
offset_right = -371.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Start" type="Button" parent="MenuInicial/VBoxContainer" unique_id=674300417]
layout_mode = 2
theme = ExtResource("2_ckujo")
theme_override_font_sizes/font_size = 36
text = "Start"

[node name="Options" type="Button" parent="MenuInicial/VBoxContainer" unique_id=700185959]
layout_mode = 2
theme = ExtResource("2_ckujo")
theme_override_font_sizes/font_size = 36
text = "Options"

[node name="Quit" type="Button" parent="MenuInicial/VBoxContainer" unique_id=110907460]
layout_mode = 2
theme = ExtResource("2_ckujo")
theme_override_font_sizes/font_size = 36
text = "Quit"

[node name="Opcoes" type="Control" parent="." unique_id=238201326]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_ckujo")

[node name="VBoxContainer" type="VBoxContainer" parent="Opcoes" unique_id=1891769874]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -375.0
offset_right = 375.0
offset_bottom = 649.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="Titulo" type="Label" parent="Opcoes/VBoxContainer" unique_id=613747866]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Options"
horizontal_alignment = 1

[node name="ResolucaoLabel" type="Label" parent="Opcoes/VBoxContainer" unique_id=639586086]
layout_mode = 2
text = "Resolution:"

[node name="Resolucao" type="OptionButton" parent="Opcoes/VBoxContainer" unique_id=1151103167]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2
popup/item_3/text = "1024x768"
popup/item_3/id = 3

[node name="VolumeLabel" type="Label" parent="Opcoes/VBoxContainer" unique_id=1971734359]
layout_mode = 2
text = "
Audio:"
horizontal_alignment = 1

[node name="GeralLabel" type="Label" parent="Opcoes/VBoxContainer" unique_id=738067299]
layout_mode = 2
text = "Geral:"

[node name="GeralSlider" type="HSlider" parent="Opcoes/VBoxContainer" unique_id=1636402788]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="MusicaLabel" type="Label" parent="Opcoes/VBoxContainer" unique_id=1956713343]
layout_mode = 2
text = "Music:"

[node name="MusicaSlider" type="HSlider" parent="Opcoes/VBoxContainer" unique_id=251087691]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="SFXLabel" type="Label" parent="Opcoes/VBoxContainer" unique_id=766454453]
layout_mode = 2
text = "SFX:"

[node name="SFXSlider" type="HSlider" parent="Opcoes/VBoxContainer" unique_id=1881138379]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="Voltar" type="Button" parent="Opcoes/VBoxContainer" unique_id=326305322]
layout_mode = 2
text = "Return"

[node name="CoisasIniciais" type="Control" parent="." unique_id=1660551426]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_l5uqn")

[node name="Panel" type="Panel" parent="CoisasIniciais" unique_id=1014000196]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bfrjk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CoisasIniciais" unique_id=1796260707]
libraries/ = SubResource("AnimationLibrary_ekcqx")
autoplay = &"Inicial"

[connection signal="pressed" from="MenuInicial/VBoxContainer/Start" to="Node" method="_on_start_pressed"]
[connection signal="pressed" from="MenuInicial/VBoxContainer/Options" to="Node" method="_on_options_pressed"]
[connection signal="pressed" from="MenuInicial/VBoxContainer/Quit" to="Node" method="_on_quit_pressed"]
[connection signal="item_selected" from="Opcoes/VBoxContainer/Resolucao" to="Node" method="_on_resolucao_item_selected"]
[connection signal="value_changed" from="Opcoes/VBoxContainer/GeralSlider" to="Node" method="_on_geral_slider_value_changed"]
[connection signal="value_changed" from="Opcoes/VBoxContainer/MusicaSlider" to="Node" method="_on_musica_slider_value_changed"]
[connection signal="value_changed" from="Opcoes/VBoxContainer/SFXSlider" to="Node" method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Opcoes/VBoxContainer/Voltar" to="Node" method="_on_voltar_pressed"]
[connection signal="animation_finished" from="CoisasIniciais/AnimationPlayer" to="CoisasIniciais" method="_on_animation_player_animation_finished"]
